Fix: `ExtensionDetails` header line alignment

--- a/src/modules/dashboard/components/Extensions/ExtensionDetails.css
+++ b/src/modules/dashboard/components/Extensions/ExtensionDetails.css
@@ -17,7 +17,7 @@
 }
 
 .extensionDetails .headerLine {
-  margin: 46px 0 0 -80px;
+  margin: 41px 0 0 -80px;
 }
 
 .extensionDetails table tr:first-child {
